--- a/data_wragling_exercise/hayes.ipynb
+++ b/data_wragling_exercise/hayes.ipynb
@@ -14,7 +14,12 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
