depends on the keys from external file

--- a/stock_prices/stock_prices.ipynb
+++ b/stock_prices/stock_prices.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "finite-flower",
+   "id": "unexpected-jacksonville",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,15 +14,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "interior-steering",
+   "execution_count": 11,
+   "id": "sufficient-virus",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'key': 'bd6fc9875bmshf852be3e8c9bdffp128617jsn13e5ee2b1c3c', 'host': 'apidojo-yahoo-finance-v1.p.rapidapi.com'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import yaml\n",
+    "from yaml.loader import SafeLoader\n",
+    "\n",
+    "with open('keys.yaml') as f:\n",
+    "    keys = yaml.load(f, Loader=SafeLoader)\n",
+    "    print(keys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "wicked-marks",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-12-e1c64add13f8>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-e1c64add13f8>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    host = \"keys['host']\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
    "source": [
     "url = \"https://apidojo-yahoo-finance-v1.p.rapidapi.com/stock/v3/get-historical-data\"\n",
     "\n",
-    "key = \"bd6fc9875bmshf852be3e8c9bdffp128617jsn13e5ee2b1c3c\"\n",
-    "host = \"apidojo-yahoo-finance-v1.p.rapidapi.com\"\n",
+    "key = keys['key']\n",
+    "host = keys['host']\n",
     "\n",
     "symbol = '0005.HK'\n",
     "region = 'HK'"
@@ -31,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "turkish-nepal",
+   "id": "extra-illustration",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "numerous-edgar",
+   "id": "controlling-seventh",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "eastern-magic",
+   "id": "appropriate-hawaiian",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "dated-handling",
+   "id": "interracial-worry",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "comic-determination",
+   "id": "amended-affiliate",
    "metadata": {},
    "outputs": [],
    "source": []
