--- a/credit_card_approval_prediction/credit_card_approval_prediction.ipynb
+++ b/credit_card_approval_prediction/credit_card_approval_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "leading-sleeping",
+   "id": "united-macedonia",
    "metadata": {},
    "source": [
     "## 1. Credit card applications\n",
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "faced-essay",
+   "id": "threatened-plastic",
    "metadata": {},
    "outputs": [
     {
@@ -189,9 +189,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dependent-birmingham",
+   "metadata": {},
+   "source": [
+    "## 2. Inspecting the applications\n",
+    "<p>The output may appear a bit confusing at its first sight, but let's try to figure out the most important features of a credit card application. The features of this dataset have been anonymized to protect the privacy, but <a href=\"http://rstudio-pubs-static.s3.amazonaws.com/73039_9946de135c0a49daa7a0a9eda4a67a72.html\">this blog</a> gives us a pretty good overview of the probable features. The probable features in a typical credit card application are <code>Gender</code>, <code>Age</code>, <code>Debt</code>, <code>Married</code>, <code>BankCustomer</code>, <code>EducationLevel</code>, <code>Ethnicity</code>, <code>YearsEmployed</code>, <code>PriorDefault</code>, <code>Employed</code>, <code>CreditScore</code>, <code>DriversLicense</code>, <code>Citizen</code>, <code>ZipCode</code>, <code>Income</code> and finally the <code>ApprovalStatus</code>. This gives us a pretty good starting point, and we can map these features with respect to the columns in the output.   </p>\n",
+    "<p>As we can see from our first glance at the data, the dataset has a mixture of numerical and non-numerical features. This can be fixed with some preprocessing, but before we do that, let's learn about the dataset a bit more to see if there are other dataset issues that need to be fixed.</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "circular-qualification",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               2           7          10             14\n",
+      "count  690.000000  690.000000  690.00000     690.000000\n",
+      "mean     4.758725    2.223406    2.40000    1017.385507\n",
+      "std      4.978163    3.346513    4.86294    5210.102598\n",
+      "min      0.000000    0.000000    0.00000       0.000000\n",
+      "25%      1.000000    0.165000    0.00000       0.000000\n",
+      "50%      2.750000    1.000000    0.00000       5.000000\n",
+      "75%      7.207500    2.625000    3.00000     395.500000\n",
+      "max     28.000000   28.500000   67.00000  100000.000000\n",
+      "\n",
+      "\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 690 entries, 0 to 689\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   0       690 non-null    object \n",
+      " 1   1       690 non-null    object \n",
+      " 2   2       690 non-null    float64\n",
+      " 3   3       690 non-null    object \n",
+      " 4   4       690 non-null    object \n",
+      " 5   5       690 non-null    object \n",
+      " 6   6       690 non-null    object \n",
+      " 7   7       690 non-null    float64\n",
+      " 8   8       690 non-null    object \n",
+      " 9   9       690 non-null    object \n",
+      " 10  10      690 non-null    int64  \n",
+      " 11  11      690 non-null    object \n",
+      " 12  12      690 non-null    object \n",
+      " 13  13      690 non-null    object \n",
+      " 14  14      690 non-null    int64  \n",
+      " 15  15      690 non-null    object \n",
+      "dtypes: float64(2), int64(2), object(12)\n",
+      "memory usage: 86.4+ KB\n",
+      "None\n",
+      "\n",
+      "\n",
+      "    0      1       2  3  4   5   6      7  8  9   10 11 12     13   14 15\n",
+      "673  ?  29.50   2.000  y  p   e   h  2.000  f  f   0  f  g  00256   17  -\n",
+      "674  a  37.33   2.500  u  g   i   h  0.210  f  f   0  f  g  00260  246  -\n",
+      "675  a  41.58   1.040  u  g  aa   v  0.665  f  f   0  f  g  00240  237  -\n",
+      "676  a  30.58  10.665  u  g   q   h  0.085  f  t  12  t  g  00129    3  -\n",
+      "677  b  19.42   7.250  u  g   m   v  0.040  f  t   1  f  g  00100    1  -\n",
+      "678  a  17.92  10.210  u  g  ff  ff  0.000  f  f   0  f  g  00000   50  -\n",
+      "679  a  20.08   1.250  u  g   c   v  0.000  f  f   0  f  g  00000    0  -\n",
+      "680  b  19.50   0.290  u  g   k   v  0.290  f  f   0  f  g  00280  364  -\n",
+      "681  b  27.83   1.000  y  p   d   h  3.000  f  f   0  f  g  00176  537  -\n",
+      "682  b  17.08   3.290  u  g   i   v  0.335  f  f   0  t  g  00140    2  -\n",
+      "683  b  36.42   0.750  y  p   d   v  0.585  f  f   0  f  g  00240    3  -\n",
+      "684  b  40.58   3.290  u  g   m   v  3.500  f  f   0  t  s  00400    0  -\n",
+      "685  b  21.08  10.085  y  p   e   h  1.250  f  f   0  f  g  00260    0  -\n",
+      "686  a  22.67   0.750  u  g   c   v  2.000  f  t   2  t  g  00200  394  -\n",
+      "687  a  25.25  13.500  y  p  ff  ff  2.000  f  t   1  t  g  00200    1  -\n",
+      "688  b  17.92   0.205  u  g  aa   v  0.040  f  f   0  f  g  00280  750  -\n",
+      "689  b  35.00   3.375  u  g   c   h  8.290  f  f   0  t  g  00000    0  -\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print summary statistics\n",
+    "cc_apps_description = cc_apps.describe()\n",
+    "print(cc_apps_description)\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Print DataFrame information\n",
+    "cc_apps_info = cc_apps.info()\n",
+    "print(cc_apps_info)\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Inspect missing values in the dataset\n",
+    "print(cc_apps.tail(17))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "surrounded-injection",
+   "id": "latter-wrist",
    "metadata": {},
    "outputs": [],
    "source": []
