--- a/credit_card_approval_prediction/credit_card_approval_prediction.ipynb
+++ b/credit_card_approval_prediction/credit_card_approval_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "female-egypt",
+   "id": "available-marine",
    "metadata": {},
    "source": [
     "## 1. Credit card applications\n",
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "continent-church",
+   "id": "handy-fifteen",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "together-assurance",
+   "id": "radio-creek",
    "metadata": {},
    "source": [
     "## 2. Inspecting the applications\n",
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "registered-heaven",
+   "id": "unknown-technical",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "severe-maria",
+   "id": "numerous-residence",
    "metadata": {},
    "source": [
     "## 3. Handling the missing values (part i)\n",
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "basic-satellite",
+   "id": "unlimited-owner",
    "metadata": {},
    "outputs": [
     {
@@ -362,9 +362,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "demographic-cookie",
+   "metadata": {},
+   "source": [
+    "## 4. Handling the missing values (part ii)\n",
+    "<p>We replaced all the question marks with NaNs. This is going to help us in the next missing value treatment that we are going to perform.</p>\n",
+    "<p>An important question that gets raised here is <em>why are we giving so much importance to missing values</em>? Can't they be just ignored? Ignoring missing values can affect the performance of a machine learning model heavily. While ignoring the missing values our machine learning model may miss out on information about the dataset that may be useful for its training. Then, there are many models which cannot handle missing values implicitly such as LDA. </p>\n",
+    "<p>So, to avoid this problem, we are going to impute the missing values with a strategy called mean imputation.</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "complete-stand",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     12\n",
+       "1     12\n",
+       "2      0\n",
+       "3      6\n",
+       "4      6\n",
+       "5      9\n",
+       "6      9\n",
+       "7      0\n",
+       "8      0\n",
+       "9      0\n",
+       "10     0\n",
+       "11     0\n",
+       "12     0\n",
+       "13    13\n",
+       "14     0\n",
+       "15     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Impute the missing values with mean imputation\n",
+    "cc_apps.fillna(cc_apps.mean(), inplace=True)\n",
+    "\n",
+    "# Count the number of NaNs in the dataset to verify.\n",
+    "cc_apps.isnull().sum()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "talented-beaver",
+   "id": "recent-access",
    "metadata": {},
    "outputs": [],
    "source": []
