--- a/credit_card_approval_prediction/credit_card_approval_prediction.ipynb
+++ b/credit_card_approval_prediction/credit_card_approval_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "available-marine",
+   "id": "drawn-metadata",
    "metadata": {},
    "source": [
     "## 1. Credit card applications\n",
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "handy-fifteen",
+   "id": "aboriginal-manitoba",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "radio-creek",
+   "id": "covered-section",
    "metadata": {},
    "source": [
     "## 2. Inspecting the applications\n",
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "unknown-technical",
+   "id": "junior-weight",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "numerous-residence",
+   "id": "rapid-links",
    "metadata": {},
    "source": [
     "## 3. Handling the missing values (part i)\n",
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "unlimited-owner",
+   "id": "shared-checkout",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "demographic-cookie",
+   "id": "orange-competition",
    "metadata": {},
    "source": [
     "## 4. Handling the missing values (part ii)\n",
@@ -374,8 +374,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "complete-stand",
+   "execution_count": 6,
+   "id": "english-athletics",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,9 +414,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "right-dinner",
+   "metadata": {},
+   "source": [
+    "## 5. Handling the missing values (part iii)\n",
+    "<p>We have successfully taken care of the missing values present in the numeric columns. There are still some missing values to be imputed for columns 0, 1, 3, 4, 5, 6 and 13. All of these columns contain non-numeric data and this why the mean imputation strategy would not work here. This needs a different treatment. </p>\n",
+    "<p>We are going to impute these missing values with the most frequent values as present in the respective columns. This is <a href=\"https://www.datacamp.com/community/tutorials/categorical-data\">good practice</a> when it comes to imputing missing values for categorical data in general.</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "purple-genius",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method DataFrame.isnull of     0      1       2  3  4   5   6     7  8  9   10 11 12     13   14 15\n",
+      "0    b  30.83   0.000  u  g   w   v  1.25  t  t   1  f  g  00202    0  +\n",
+      "1    a  58.67   4.460  u  g   q   h  3.04  t  t   6  f  g  00043  560  +\n",
+      "2    a  24.50   0.500  u  g   q   h  1.50  t  f   0  f  g  00280  824  +\n",
+      "3    b  27.83   1.540  u  g   w   v  3.75  t  t   5  t  g  00100    3  +\n",
+      "4    b  20.17   5.625  u  g   w   v  1.71  t  f   0  f  s  00120    0  +\n",
+      "..  ..    ...     ... .. ..  ..  ..   ... .. ..  .. .. ..    ...  ... ..\n",
+      "685  b  21.08  10.085  y  p   e   h  1.25  f  f   0  f  g  00260    0  -\n",
+      "686  a  22.67   0.750  u  g   c   v  2.00  f  t   2  t  g  00200  394  -\n",
+      "687  a  25.25  13.500  y  p  ff  ff  2.00  f  t   1  t  g  00200    1  -\n",
+      "688  b  17.92   0.205  u  g  aa   v  0.04  f  f   0  f  g  00280  750  -\n",
+      "689  b  35.00   3.375  u  g   c   h  8.29  f  f   0  t  g  00000    0  -\n",
+      "\n",
+      "[690 rows x 16 columns]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Iterate over each column of cc_apps\n",
+    "for col in cc_apps:\n",
+    "    # Check if the column is of object type\n",
+    "    if cc_apps[col].dtype == 'object':\n",
+    "        # Impute with the most frequent value\n",
+    "        cc_apps = cc_apps.fillna(cc_apps[col].value_counts().index[0])\n",
+    "\n",
+    "# Count the number of NaNs in the dataset and print the counts to verify\n",
+    "print(cc_apps.isnull)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "recent-access",
+   "id": "featured-colon",
    "metadata": {},
    "outputs": [],
    "source": []
