--- a/credit_card_approval_prediction/credit_card_approval_prediction.ipynb
+++ b/credit_card_approval_prediction/credit_card_approval_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "drawn-metadata",
+   "id": "nonprofit-context",
    "metadata": {},
    "source": [
     "## 1. Credit card applications\n",
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "aboriginal-manitoba",
+   "id": "printable-discussion",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "covered-section",
+   "id": "mobile-executive",
    "metadata": {},
    "source": [
     "## 2. Inspecting the applications\n",
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "junior-weight",
+   "id": "nasty-authorization",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rapid-links",
+   "id": "south-dinner",
    "metadata": {},
    "source": [
     "## 3. Handling the missing values (part i)\n",
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "shared-checkout",
+   "id": "structural-interval",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "orange-competition",
+   "id": "guided-bottle",
    "metadata": {},
    "source": [
     "## 4. Handling the missing values (part ii)\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "english-athletics",
+   "id": "russian-science",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "right-dinner",
+   "id": "suspended-evaluation",
    "metadata": {},
    "source": [
     "## 5. Handling the missing values (part iii)\n",
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "purple-genius",
+   "id": "abstract-behavior",
    "metadata": {},
    "outputs": [
     {
@@ -463,9 +463,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "liable-involvement",
+   "metadata": {},
+   "source": [
+    "## 6. Preprocessing the data (part i)\n",
+    "<p>The missing values are now successfully handled.</p>\n",
+    "<p>There is still some minor but essential data preprocessing needed before we proceed towards building our machine learning model. We are going to divide these remaining preprocessing steps into three main tasks:</p>\n",
+    "<ol>\n",
+    "<li>Convert the non-numeric data into numeric.</li>\n",
+    "<li>Split the data into train and test sets. </li>\n",
+    "<li>Scale the feature values to a uniform range.</li>\n",
+    "</ol>\n",
+    "<p>First, we will be converting all the non-numeric values into numeric ones. We do this because not only it results in a faster computation but also many machine learning models (like XGBoost) (and especially the ones developed using scikit-learn) require the data to be in a strictly numeric format. We will do this by using a technique called <a href=\"http://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.LabelEncoder.html\">label encoding</a>.</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "utility-matter",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import LabelEncoder\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# Instantiate LabelEncoder\n",
+    "le=LabelEncoder()\n",
+    "\n",
+    "# Iterate over all the values of each column and extract their dtypes\n",
+    "for col in cc_apps.columns.to_numpy():\n",
+    "    # Compare if the dtype is object\n",
+    "    if cc_apps[col].dtypes=='object':\n",
+    "    # Use LabelEncoder to do the numeric transformation\n",
+    "        cc_apps[col]=le.fit_transform(cc_apps[col])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "featured-colon",
+   "id": "suspected-guinea",
    "metadata": {},
    "outputs": [],
    "source": []
