--- a/credit_card_approval_prediction/credit_card_approval_prediction.ipynb
+++ b/credit_card_approval_prediction/credit_card_approval_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "nonprofit-context",
+   "id": "alike-gardening",
    "metadata": {},
    "source": [
     "## 1. Credit card applications\n",
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "printable-discussion",
+   "id": "reserved-offense",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mobile-executive",
+   "id": "specific-discovery",
    "metadata": {},
    "source": [
     "## 2. Inspecting the applications\n",
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "nasty-authorization",
+   "id": "breathing-juvenile",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "south-dinner",
+   "id": "purple-hamburg",
    "metadata": {},
    "source": [
     "## 3. Handling the missing values (part i)\n",
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "structural-interval",
+   "id": "super-classification",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "guided-bottle",
+   "id": "conservative-marble",
    "metadata": {},
    "source": [
     "## 4. Handling the missing values (part ii)\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "russian-science",
+   "id": "accessory-quest",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suspended-evaluation",
+   "id": "funded-satisfaction",
    "metadata": {},
    "source": [
     "## 5. Handling the missing values (part iii)\n",
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "abstract-behavior",
+   "id": "removable-creation",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liable-involvement",
+   "id": "liable-shelter",
    "metadata": {},
    "source": [
     "## 6. Preprocessing the data (part i)\n",
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "utility-matter",
+   "id": "usual-scale",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,9 +500,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "official-teaching",
+   "metadata": {},
+   "source": [
+    "## 7. Splitting the dataset into train and test sets\n",
+    "<p>We have successfully converted all the non-numeric values to numeric ones.</p>\n",
+    "<p>Now, we will split our data into train set and test set to prepare our data for two different phases of machine learning modeling: training and testing. Ideally, no information from the test data should be used to scale the training data or should be used to direct the training process of a machine learning model. Hence, we first split the data and then apply the scaling.</p>\n",
+    "<p>Also, features like <code>DriversLicense</code> and <code>ZipCode</code> are not as important as the other features in the dataset for predicting credit card approvals. We should drop them to design our machine learning model with the best set of features. In Data Science literature, this is often referred to as <em>feature selection</em>. </p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "alien-child",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import train_test_split\n",
+    "# ... YOUR CODE FOR TASK 7 ...\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Drop the features 11 and 13 and convert the DataFrame to a NumPy array\n",
+    "cc_apps = cc_apps.drop([11, 13], axis=1)\n",
+    "cc_apps = cc_apps.to_numpy()\n",
+    "\n",
+    "# Segregate features and labels into separate variables\n",
+    "X,y = cc_apps[:,0:13] , cc_apps[:,13]\n",
+    "\n",
+    "# Split into train and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,\n",
+    "                                y,\n",
+    "                                test_size=0.33,\n",
+    "                                random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "derived-dining",
+   "metadata": {},
+   "source": [
+    "## 8. Preprocessing the data (part ii)\n",
+    "<p>The data is now split into two separate sets - train and test sets respectively. We are only left with one final preprocessing step of scaling before we can fit a machine learning model to the data. </p>\n",
+    "<p>Now, let's try to understand what these scaled values mean in the real world. Let's use <code>CreditScore</code> as an example. The credit score of a person is their creditworthiness based on their credit history. The higher this number, the more financially trustworthy a person is considered to be. So, a <code>CreditScore</code> of 1 is the highest since we're rescaling all the values to the range of 0-1.</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "nominated-interval",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import MinMaxScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "# Instantiate MinMaxScaler and use it to rescale X_train and X_test\n",
+    "scaler = MinMaxScaler(feature_range=(0, 1))\n",
+    "rescaledX_train = scaler.fit_transform(X_train)\n",
+    "rescaledX_test = scaler.transform(X_test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suspected-guinea",
+   "id": "corporate-morris",
    "metadata": {},
    "outputs": [],
    "source": []
