--- a/credit_card_approval_prediction/credit_card_approval_prediction.ipynb
+++ b/credit_card_approval_prediction/credit_card_approval_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "alike-gardening",
+   "id": "intense-certificate",
    "metadata": {},
    "source": [
     "## 1. Credit card applications\n",
@@ -21,8 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "reserved-offense",
+   "execution_count": 14,
+   "id": "perfect-motor",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "4  b  20.17  5.625  u  g  w  v  1.71  t  f   0  f  s  00120    0  +"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "specific-discovery",
+   "id": "molecular-information",
    "metadata": {},
    "source": [
     "## 2. Inspecting the applications\n",
@@ -200,8 +200,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "breathing-juvenile",
+   "execution_count": 15,
+   "id": "marked-cancer",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "purple-hamburg",
+   "id": "binding-truck",
    "metadata": {},
    "source": [
     "## 3. Handling the missing values (part i)\n",
@@ -300,8 +300,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "super-classification",
+   "execution_count": 16,
+   "id": "wound-pasta",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conservative-marble",
+   "id": "expressed-conversion",
    "metadata": {},
    "source": [
     "## 4. Handling the missing values (part ii)\n",
@@ -374,8 +374,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "accessory-quest",
+   "execution_count": 17,
+   "id": "above-merit",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "funded-satisfaction",
+   "id": "green-recognition",
    "metadata": {},
    "source": [
     "## 5. Handling the missing values (part iii)\n",
@@ -425,8 +425,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "removable-creation",
+   "execution_count": 18,
+   "id": "visible-belize",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liable-shelter",
+   "id": "arabic-leader",
    "metadata": {},
    "source": [
     "## 6. Preprocessing the data (part i)\n",
@@ -480,8 +480,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "usual-scale",
+   "execution_count": 19,
+   "id": "animal-banking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "official-teaching",
+   "id": "tracked-least",
    "metadata": {},
    "source": [
     "## 7. Splitting the dataset into train and test sets\n",
@@ -512,8 +512,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "alien-child",
+   "execution_count": 20,
+   "id": "employed-quarterly",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "derived-dining",
+   "id": "scheduled-thesis",
    "metadata": {},
    "source": [
     "## 8. Preprocessing the data (part ii)\n",
@@ -547,8 +547,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "nominated-interval",
+   "execution_count": 21,
+   "id": "indie-vancouver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,9 +562,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "proud-three",
+   "metadata": {},
+   "source": [
+    "## 9. Fitting a logistic regression model to the train set\n",
+    "<p>Essentially, predicting if a credit card application will be approved or not is a <a href=\"https://en.wikipedia.org/wiki/Statistical_classification\">classification</a> task. <a href=\"http://archive.ics.uci.edu/ml/machine-learning-databases/credit-screening/crx.names\">According to UCI</a>, our dataset contains more instances that correspond to \"Denied\" status than instances corresponding to \"Approved\" status. Specifically, out of 690 instances, there are 383 (55.5%) applications that got denied and 307 (44.5%) applications that got approved. </p>\n",
+    "<p>This gives us a benchmark. A good machine learning model should be able to accurately predict the status of the applications with respect to these statistics.</p>\n",
+    "<p>Which model should we pick? A question to ask is: <em>are the features that affect the credit card approval decision process correlated with each other?</em> Although we can measure correlation, that is outside the scope of this notebook, so we'll rely on our intuition that they indeed are correlated for now. Because of this correlation, we'll take advantage of the fact that generalized linear models perform well in these cases. Let's start our machine learning modeling with a Logistic Regression model (a generalized linear model).</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "broken-stand",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# Instantiate a LogisticRegression classifier with default parameter values\n",
+    "logreg = LogisticRegression()\n",
+    "\n",
+    "# Fit logreg to the train set\n",
+    "logreg.fit(rescaledX_train, y_train)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "corporate-morris",
+   "id": "prerequisite-massachusetts",
    "metadata": {},
    "outputs": [],
    "source": []
