--- a/credit_card_approval_prediction/credit_card_approval_prediction.ipynb
+++ b/credit_card_approval_prediction/credit_card_approval_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "intense-certificate",
+   "id": "functional-planner",
    "metadata": {},
    "source": [
     "## 1. Credit card applications\n",
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "perfect-motor",
+   "id": "removed-alarm",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "molecular-information",
+   "id": "clear-boundary",
    "metadata": {},
    "source": [
     "## 2. Inspecting the applications\n",
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "marked-cancer",
+   "id": "minute-express",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "binding-truck",
+   "id": "specific-muslim",
    "metadata": {},
    "source": [
     "## 3. Handling the missing values (part i)\n",
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "wound-pasta",
+   "id": "judicial-radio",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "expressed-conversion",
+   "id": "voluntary-trinity",
    "metadata": {},
    "source": [
     "## 4. Handling the missing values (part ii)\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "above-merit",
+   "id": "judicial-chaos",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "green-recognition",
+   "id": "disabled-virgin",
    "metadata": {},
    "source": [
     "## 5. Handling the missing values (part iii)\n",
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "visible-belize",
+   "id": "objective-killing",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "arabic-leader",
+   "id": "plain-volunteer",
    "metadata": {},
    "source": [
     "## 6. Preprocessing the data (part i)\n",
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "animal-banking",
+   "id": "mediterranean-sleep",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tracked-least",
+   "id": "banned-invention",
    "metadata": {},
    "source": [
     "## 7. Splitting the dataset into train and test sets\n",
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "employed-quarterly",
+   "id": "polyphonic-ranking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "scheduled-thesis",
+   "id": "living-toolbox",
    "metadata": {},
    "source": [
     "## 8. Preprocessing the data (part ii)\n",
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "indie-vancouver",
+   "id": "fossil-universal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proud-three",
+   "id": "needed-switzerland",
    "metadata": {},
    "source": [
     "## 9. Fitting a logistic regression model to the train set\n",
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "broken-stand",
+   "id": "minimal-focus",
    "metadata": {},
    "outputs": [
     {
@@ -600,9 +600,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cheap-individual",
+   "metadata": {},
+   "source": [
+    "## 10. Making predictions and evaluating performance\n",
+    "<p>But how well does our model perform? </p>\n",
+    "<p>We will now evaluate our model on the test set with respect to <a href=\"https://developers.google.com/machine-learning/crash-course/classification/accuracy\">classification accuracy</a>. But we will also take a look the model's <a href=\"http://www.dataschool.io/simple-guide-to-confusion-matrix-terminology/\">confusion matrix</a>. In the case of predicting credit card applications, it is equally important to see if our machine learning model is able to predict the approval status of the applications as denied that originally got denied. If our model is not performing well in this aspect, then it might end up approving the application that should have been approved. The confusion matrix helps us to view our model's performance from these aspects.  </p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "vocal-constraint",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of logistic regression classifier:  0.8421052631578947\n",
+      "[[94  9]\n",
+      " [27 98]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import confusion_matrix\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "# Use logreg to predict instances from the test set and store it\n",
+    "y_pred = logreg.predict(rescaledX_test)\n",
+    "\n",
+    "# Get the accuracy score of logreg model and print it\n",
+    "print(\"Accuracy of logistic regression classifier: \", logreg.score(rescaledX_test, y_test))\n",
+    "\n",
+    "# Print the confusion matrix of the logreg model\n",
+    "print(confusion_matrix(y_test, y_pred))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prerequisite-massachusetts",
+   "id": "alpha-citizenship",
    "metadata": {},
    "outputs": [],
    "source": []
