--- a/credit_card_approval_prediction/credit_card_approval_prediction.ipynb
+++ b/credit_card_approval_prediction/credit_card_approval_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "functional-planner",
+   "id": "assisted-serial",
    "metadata": {},
    "source": [
     "## 1. Credit card applications\n",
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "removed-alarm",
+   "id": "homeless-rider",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "clear-boundary",
+   "id": "celtic-error",
    "metadata": {},
    "source": [
     "## 2. Inspecting the applications\n",
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "minute-express",
+   "id": "wound-cargo",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "specific-muslim",
+   "id": "congressional-occurrence",
    "metadata": {},
    "source": [
     "## 3. Handling the missing values (part i)\n",
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "judicial-radio",
+   "id": "geographic-method",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "voluntary-trinity",
+   "id": "grateful-giving",
    "metadata": {},
    "source": [
     "## 4. Handling the missing values (part ii)\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "judicial-chaos",
+   "id": "opening-license",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "disabled-virgin",
+   "id": "representative-provider",
    "metadata": {},
    "source": [
     "## 5. Handling the missing values (part iii)\n",
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "objective-killing",
+   "id": "impaired-bibliography",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "plain-volunteer",
+   "id": "resident-cache",
    "metadata": {},
    "source": [
     "## 6. Preprocessing the data (part i)\n",
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "mediterranean-sleep",
+   "id": "bridal-photographer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "banned-invention",
+   "id": "personal-baptist",
    "metadata": {},
    "source": [
     "## 7. Splitting the dataset into train and test sets\n",
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "polyphonic-ranking",
+   "id": "historic-neutral",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "living-toolbox",
+   "id": "incomplete-madness",
    "metadata": {},
    "source": [
     "## 8. Preprocessing the data (part ii)\n",
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fossil-universal",
+   "id": "flush-gamma",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "needed-switzerland",
+   "id": "described-jacksonville",
    "metadata": {},
    "source": [
     "## 9. Fitting a logistic regression model to the train set\n",
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "minimal-focus",
+   "id": "acoustic-republic",
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cheap-individual",
+   "id": "creative-topic",
    "metadata": {},
    "source": [
     "## 10. Making predictions and evaluating performance\n",
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "vocal-constraint",
+   "id": "affiliated-processor",
    "metadata": {},
    "outputs": [
     {
@@ -640,9 +640,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "turkish-theater",
+   "metadata": {},
+   "source": [
+    "## 11. Grid searching and making the model perform better\n",
+    "<p>Our model was pretty good! It was able to yield an accuracy score of almost 84%.</p>\n",
+    "<p>For the confusion matrix, the first element of the of the first row of the confusion matrix denotes the true negatives meaning the number of negative instances (denied applications) predicted by the model correctly. And the last element of the second row of the confusion matrix denotes the true positives meaning the number of positive instances (approved applications) predicted by the model correctly.</p>\n",
+    "<p>Let's see if we can do better. We can perform a <a href=\"https://machinelearningmastery.com/how-to-tune-algorithm-parameters-with-scikit-learn/\">grid search</a> of the model parameters to improve the model's ability to predict credit card approvals.</p>\n",
+    "<p><a href=\"http://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html\">scikit-learn's implementation of logistic regression</a> consists of different hyperparameters but we will grid search over the following two:</p>\n",
+    "<ul>\n",
+    "<li>tol</li>\n",
+    "<li>max_iter</li>\n",
+    "</ul>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "acceptable-shanghai",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import GridSearchCV\n",
+    "# ... YOUR CODE FOR TASK 11 ...\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "# Define the grid of values for tol and max_iter\n",
+    "tol = [0.01, 0.001, 0.0001]\n",
+    "max_iter = [100, 150, 200]\n",
+    "\n",
+    "# Create a dictionary where tol and max_iter are keys and the lists of their values are corresponding values\n",
+    "param_grid = dict(tol = tol, max_iter = max_iter)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alpha-citizenship",
+   "id": "soviet-baseline",
    "metadata": {},
    "outputs": [],
    "source": []
