--- a/credit_card_approval_prediction/credit_card_approval_prediction.ipynb
+++ b/credit_card_approval_prediction/credit_card_approval_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "assisted-serial",
+   "id": "twenty-series",
    "metadata": {},
    "source": [
     "## 1. Credit card applications\n",
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "homeless-rider",
+   "id": "generic-separate",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "celtic-error",
+   "id": "editorial-domain",
    "metadata": {},
    "source": [
     "## 2. Inspecting the applications\n",
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "wound-cargo",
+   "id": "animated-ivory",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "congressional-occurrence",
+   "id": "upset-wells",
    "metadata": {},
    "source": [
     "## 3. Handling the missing values (part i)\n",
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "geographic-method",
+   "id": "spanish-means",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "grateful-giving",
+   "id": "psychological-congo",
    "metadata": {},
    "source": [
     "## 4. Handling the missing values (part ii)\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "opening-license",
+   "id": "exposed-senate",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "representative-provider",
+   "id": "intended-institute",
    "metadata": {},
    "source": [
     "## 5. Handling the missing values (part iii)\n",
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "impaired-bibliography",
+   "id": "irish-cutting",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "resident-cache",
+   "id": "indie-valuation",
    "metadata": {},
    "source": [
     "## 6. Preprocessing the data (part i)\n",
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "bridal-photographer",
+   "id": "useful-avatar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "personal-baptist",
+   "id": "australian-tribute",
    "metadata": {},
    "source": [
     "## 7. Splitting the dataset into train and test sets\n",
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "historic-neutral",
+   "id": "mexican-occasion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incomplete-madness",
+   "id": "possible-green",
    "metadata": {},
    "source": [
     "## 8. Preprocessing the data (part ii)\n",
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "flush-gamma",
+   "id": "transparent-capability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "described-jacksonville",
+   "id": "contrary-foundation",
    "metadata": {},
    "source": [
     "## 9. Fitting a logistic regression model to the train set\n",
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "acoustic-republic",
+   "id": "subjective-arrest",
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "creative-topic",
+   "id": "psychological-server",
    "metadata": {},
    "source": [
     "## 10. Making predictions and evaluating performance\n",
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "affiliated-processor",
+   "id": "offshore-classics",
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "turkish-theater",
+   "id": "rotary-retailer",
    "metadata": {},
    "source": [
     "## 11. Grid searching and making the model perform better\n",
@@ -657,8 +657,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "acceptable-shanghai",
+   "execution_count": 25,
+   "id": "north-protein",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,12 +675,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "soviet-baseline",
+   "cell_type": "markdown",
+   "id": "bottom-intention",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 12. Finding the best performing model\n",
+    "<p>We have defined the grid of hyperparameter values and converted them into a single dictionary format which <code>GridSearchCV()</code> expects as one of its parameters. Now, we will begin the grid search to see which values perform best.</p>\n",
+    "<p>We will instantiate <code>GridSearchCV()</code> with our earlier <code>logreg</code> model with all the data we have. Instead of passing train and test sets separately, we will supply <code>X</code> (scaled version) and <code>y</code>. We will also instruct <code>GridSearchCV()</code> to perform a <a href=\"https://www.dataschool.io/machine-learning-with-scikit-learn/\">cross-validation</a> of five folds.</p>\n",
+    "<p>We'll end the notebook by storing the best-achieved score and the respective best parameters.</p>\n",
+    "<p>While building this credit card predictor, we tackled some of the most widely-known preprocessing steps such as <strong>scaling</strong>, <strong>label encoding</strong>, and <strong>missing value imputation</strong>. We finished with some <strong>machine learning</strong> to predict if a person's application for a credit card would get approved or not given some information about that person.</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "public-wesley",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best: 0.850725 using {'max_iter': 100, 'tol': 0.01}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Instantiate GridSearchCV with the required parameters\n",
+    "grid_model = GridSearchCV(estimator=logreg, param_grid=param_grid, cv=5)\n",
+    "\n",
+    "# Use scaler to rescale X and assign it to rescaledX\n",
+    "rescaledX = scaler.fit_transform(X)\n",
+    "\n",
+    "# Fit data to grid_model\n",
+    "grid_model_result = grid_model.fit(rescaledX, y)\n",
+    "\n",
+    "# Summarize results\n",
+    "best_score, best_params = grid_model_result.best_score_, grid_model_result.best_params_\n",
+    "print(\"Best: %f using %s\" % (best_score, best_params))"
+   ]
   }
  ],
  "metadata": {
