--- a/Windows_Store_Apps/Windows_Store_Apps.ipynb
+++ b/Windows_Store_Apps/Windows_Store_Apps.ipynb
@@ -39,7 +39,7 @@
       "source": [
         "import pandas as pd\n",
         "\n",
-        "df = pd.read_csv('/content/drive/My Drive/Colab Notebooks/data/msft.csv', index_col = 'Date')\n",
+        "df = pd.read_csv('data/msft.csv', index_col = 'Date')\n",
         "df.head()"
       ],
       "execution_count": 20,
